webroot/css/less/tiny_admin.less
// Core variables and mixins
@import "bootstrap/variables.less";
@import "bootstrap/mixins.less";

// Modals
@import "bootstrap/modals.less";
@import "bootstrap/close.less";

.ta-hover {
	 outline: 5px solid fade(color('#FFE767'), 70%);
}

.ta-active {
	 outline-color: fade(color('#80B5F2'), 70%);
}

.ta-toolbar {
	// Reset
	@import "bootstrap/normalize.less";
	@import "bootstrap/print.less";

	// Core CSS
	@import "bootstrap/scaffolding.less";
	@import "bootstrap/type.less";
	@import "bootstrap/code.less";
	@import "bootstrap/buttons.less";
	@import "bootstrap/grid.less";

	// Forms
	@import "bootstrap/forms.less";

	// Components
	@import "bootstrap/button-groups.less";

	// Font awesome
	@import "font-awesome/font-awesome.less";

	// Main design
	position: fixed;
	top: 0px;
	left: 0px;
	z-index: 10000;

	background: @gray-lighter;
	border-radius: 0 5px 5px 0;
	box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.5);
	opacity: 0.8;

	&.active {
		.btn-toolbar {
			display: block;
		}
	}

	&.active, &:hover, &:focus {
		opacity: 1.0;
	}

	.btn-toolbar {
		float: left;
		display: none;
		padding: 5px 0px 5px 10px;
	}

	.ta-toggle {
		line-height: 32px;
		padding: 0px 10px;
		&:hover, &:focus {
			outline: none;
		}
	}

	.modal {
		color: @text-color;
	}
}

